--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
     <title> Index Perez Rossi </title>
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="pagina.js"></script>
+    <link rel="icon" type="image/png" href="mw.png">
 </head>
 <body>
     <div class="background">
