--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Index Perez Rossi </title>
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="pagina.js"></script>
-    <link rel="icon" type="image/png" href="mw.png">
+    <link rel="icon" type="image/xcf" href="mw.png">
 </head>
 <body>
     <div class="background">
