--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <img src="mw.png" id="imagen" >
             </a>
             <h1>Ejercicio 18 de Junio </h1>
-            <h2>cambio de calor</h2>
+            <h2>cambio de color</h2>
             <a href="file:///C:/Users/AGUS/Desktop/JS%20Perez%20Rossi/18-6.html">
                 <img src="mw.png" id="imagen" >
             </a>
