Cambios en el fondo

--- a/index.html
+++ b/index.html
@@ -7,22 +7,8 @@
     <script type="text/javascript" src="pagina.js"></script>
     <link rel="icon" type="image/xcf" href="mw.png">
 </head>
-<body>
-    <div class="background">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-     </div>
+<body  id="particles-js">
+    
     <div id="encabezado"> 
         <h1>Agustín Peréz Rossi</h1>
         <h2>3°CST Computación </h2>
@@ -103,5 +89,9 @@
         </div>
         
     </div>
+    <script src="http://falconmasters.com/demos/particulas/particles.min.js">
+ </script>
+    <script src="http://falconmasters.com/demos/particulas/particulas.js"></script>
 </body>
+
 </html>
